# vit_202603_garbage_classification

./: .gitignore  LICENSE  README.md  garbage_classification.ipynb  garbage_classification_question.ipynb  pyproject.toml
cred/: hf_token.json.template
