[tool.poetry]
package-mode = false

[project]
name = "garbage-classification"
version = "0.1.0"
description = "Simple ViT Project for BINUS Course 'Deep Learning and Its Application'"
authors = [
    {name = "i-putu-mahendra-wijaya",email = "i.putu.mahendra@gmail.com"}
]
license = "MIT"
readme = "README.md"
dynamic = ["dependencies", "requires-python"]

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1.26.0"
pandas = "^2.2.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
kagglehub = "^0.3.13"

# Keep the TensorFlow version aligned across local macOS and Linux/Colab.
tensorflow = [
    { version = "2.16.2", markers = "sys_platform == 'darwin'" },
    { version = "2.16.2", markers = "sys_platform == 'linux'" }
]
tensorflow-metal = { version = "^1.1.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
ipykernel = "^7.2.0"
ipywidgets = "^8.1.7"
pandas-stubs = "~=2.3.3"
ydata-profiling = "^4.18.1"
setuptools = ">=80,<82"
scikit-learn = "^1.8.0"
notebook = "^7.5.5"
pillow = ">=11.1,<13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
